// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`relays a response from the app to the client 1`] = `
[
  {
    "abc": 123,
    "def": 456,
  },
]
`;

exports[`relays a response from the app to the client 2`] = `
[
  {
    "name": "one",
    "value": "header one",
  },
  {
    "name": "two",
    "value": "header two",
  },
  {
    "name": "connection",
    "value": "keep-alive",
  },
  {
    "name": "Access-Control-Allow-Origin",
    "value": "*",
  },
  {
    "name": "Access-Control-Allow-Methods",
    "value": "GET, POST, OPTIONS",
  },
  {
    "name": "Access-Control-Allow-Headers",
    "value": "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range",
  },
  {
    "name": "Access-Control-Expose-Headers",
    "value": "Content-Length,Content-Range",
  },
]
`;

exports[`sends preflight response headers 1`] = `
[
  {
    "name": "Access-Control-Allow-Origin",
    "value": "*",
  },
  {
    "name": "Access-Control-Allow-Methods",
    "value": "GET, POST, OPTIONS",
  },
  {
    "name": "Access-Control-Allow-Headers",
    "value": "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range",
  },
  {
    "name": "Access-Control-Expose-Headers",
    "value": "Content-Length,Content-Range",
  },
  {
    "name": "Access-Control-Max-Age",
    "value": 86400,
  },
  {
    "name": "Content-Type",
    "value": "text/plain; charset=utf-8",
  },
]
`;

exports[`sets CORS headers on a reply object 1`] = `
[
  {
    "name": "Access-Control-Allow-Origin",
    "value": "*",
  },
  {
    "name": "Access-Control-Allow-Methods",
    "value": "GET, POST, OPTIONS",
  },
  {
    "name": "Access-Control-Allow-Headers",
    "value": "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range",
  },
  {
    "name": "Access-Control-Expose-Headers",
    "value": "Content-Length,Content-Range",
  },
]
`;
